--- a/playbook.yml
+++ b/playbook.yml
@@ -38,8 +38,10 @@
       - git: repo=https://github.com/kurron/scripts.git dest=/home/vagrant/GitHub/scripts
       - git: repo=https://github.com/kurron/docker-oracle-jdk-8.git dest=/home/vagrant/GitHub/docker-oracle-jdk-8
       - git: repo=https://github.com/kurron/sequence-diagrams.git dest=/home/vagrant/GitHub/sequence-diagrams
+      - git: repo=https://github.com/awslabs/git-secrets.git dest=/home/vagrant/GitHub/git-secrets
       - name: Set permissions on the home directory
         file: path=/home/vagrant owner=vagrant group=vagrant recurse=true state=directory
+      - shell: cd /home/vagrant/GitHub/git-secrets ; make install
 
 - name: Tools I Like
   hosts: Ubuntu
